--- a/website/loopedin/static/signup/css/main.css
+++ b/website/loopedin/static/signup/css/main.css
@@ -9,6 +9,36 @@ body {
     font-size: 80px;
 }
 
+.form-control {
+    font-size: 4.9vw;
+    padding: 40px;
+}
+
+#next-button {
+    width:100%;
+    margin-top: 40px;
+    border-color: white;
+}
+
+.card {
+    background-color: white;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, .60), -5px -5px 10px rgba(20, 20, 20, .14);
+    color: black;
+    font-size: 30px;
+    width: 100%;
+}
+
+.info {
+    float: right;
+    padding-right: 40px;
+}
+
+.rep-photo {
+    width: 8em;
+    padding: 20px;
+    float: left;
+}
+
 @media screen and (max-width: 710px) {
     .navbar-brand {
         font-size: 40px;
@@ -17,6 +47,18 @@ body {
     #logo {
         width: 139px;
         height: 89px;
+    }
+
+    .form-control {
+        height: 5em;
+        font-size: 40px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .form-control {
+        height: 6em;
+        font-size: 40%;
     }
 }
 
