--- a/website/loopedin/templates/signup/congress.html
+++ b/website/loopedin/templates/signup/congress.html
@@ -33,43 +33,70 @@
     </a>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid subtilte">
     <div class="row">
-        <div class="col-6">
-            <!-- REP INFO -->
-            <div class="card">
-                <img class="rep-photo" src="{{ REP_PHOTO }}">
-                <br/>
-                <div class="name info">Name</div> <br/>
-                <div class="party info">Democratic</div> <br/>
-                <div class="website info">Democratic</div> <br/>
-            </div>
-        </div>
-        <div class="col6">
-            <!-- SEN 1 INFO -->
-            <div class="card">
-                <img class="rep-photo" src="{{ SEN_1_PHOTO }}">
-                <br/>
-                <div class="name info">Name</div> <br/>
-                <div class="party info">Democratic</div> <br/>
-                <div class="website info">Democratic</div> <br/>
-            </div>
+        <div class="col">
+            These are the people representing you in congress:
         </div>
     </div>
+</div>
+
+<div class="container-fluid">
     <div class="row">
-        <div class="col-6"></div>
-        <div class="col-6">
+        <div class="col-sm-4">
+            <!-- REP INFO -->
+            <div class="card">
+                <img class="rep-photo ml-auto mr-auto" src="{{ REP_PHOTO }}">
+                <br/>
+                <div class="rep-type info">House Representative</div>
+                <div class="name info">{{ REP_NAME }}</div>
+                <br/>
+                <div class="party info"> {{ REP_PARTY }}</div>
+                <br/>
+                <div class="website info"><a href="{{ REP_WEBSITE }}"> Visit Website </a></div>
+                <br/>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <!-- SEN 1 INFO -->
+            <div class="card">
+                <img class="rep-photo ml-auto mr-auto" src="{{ SEN_1_PHOTO }}">
+                <br/>
+                <div class="rep-type info">Senator</div>
+                <div class="name info"> {{ SEN_1_NAME }}</div>
+                <br/>
+                <div class="party info"> {{ SEN_1_PARTY }}</div>
+                <br/>
+                <div class="website info"><a href="{{ SEN_1_WEBSITE }}"> Visit Website </a></div>
+                <br/>
+            </div>
+        </div>
+        <div class="col-sm-4">
             <!-- SEN 2 INFO -->
             <div class="card">
-                <img class="rep-photo" src="{{ SEN_2_PHOTO }}">
+                <img class="rep-photo ml-auto mr-auto" src="{{ SEN_2_PHOTO }}">
                 <br/>
-                <div class="name info">Name</div> <br/>
-                <div class="party info">Democratic</div> <br/>
-                <div class="website info">Democratic</div> <br/>
+                <div class="rep-type info">Senator</div>
+                <div class="name info"> {{ SEN_2_NAME }}</div>
+                <br/>
+                <div class="party info"> {{ SEN_2_PARTY }}</div>
+                <br/>
+                <div class="website info"><a href="{{ SEN_2_WEBSITE }}"> Visit Website </a></div>
+                <br/>
             </div>
         </div>
     </div>
 </div>
+
+<a href="{% url 'signup:topics' %}" style="color: white;">
+    <div class="container-fluid next">
+        <div class="row">
+            <div class="col">
+                Next
+            </div>
+        </div>
+    </div>
+</a>
 
 </body>
 </html>
