--- a/website/loopedin/templates/signup/signup.html
+++ b/website/loopedin/templates/signup/signup.html
@@ -42,7 +42,7 @@
                        placeholder="Username" autocomplete="off" style="margin-top: 50px;">
                 <input type="password" class="form-control" name="password"
                        placeholder="Password" autocomplete="off" style="margin-top: 40px;">
-                <input type="submit" value="Next" id="next-button">
+                <input type="submit" value="Next" id="next-button" class="btn">
             </form>
         </div>
     </div>
