--- a/website/loopedin/static/signup/css/main.css
+++ b/website/loopedin/static/signup/css/main.css
@@ -5,12 +5,21 @@ body {
     font-family: Quicksand, sans-serif;
 }
 
+.navbar {
+    margin-top: 120px;
+}
+
 .navbar-brand {
     font-size: 80px;
 }
 
+#topics-info {
+    font-size: 45px;
+    margin-top: 20px;
+}
+
 .form-control {
-    font-size: 4.9vw;
+    font-size: 3vw;
     padding: 40px;
 }
 
@@ -18,6 +27,13 @@ body {
     width: 100%;
     margin-top: 40px;
     border-color: white;
+    border-width: 0px;
+    background-color: white;
+    font-size: 40px;
+}
+
+.topic-radio {
+    opacity: 0;
 }
 
 .card {
@@ -26,18 +42,21 @@ body {
     color: black;
     font-size: 30px;
     width: 100%;
-    height: 525px;
-}
-
-.rep-photo {
-    height: 10em;
-    max-width: 12em;
-    border-radius: 400px;
+    padding-top: 20px;
     margin-top: 20px;
 }
 
+.rep-photo {
+    height: 7em;
+    width: 6em;
+    border-radius: 400px;
+}
+
 .info {
-    padding-left: 20px;
+    padding-left: 40px;
+}
+
+.website {
     padding-bottom: 20px;
 }
 
@@ -48,18 +67,11 @@ body {
     margin-top: -20px;
 }
 
-.rep-type {
-    margin-top: 10px;
-}
-
 .next {
     background-color: rgba(0, 0, 0, 0.8);
-    margin-top: 20px;
+    margin-top: 60px;
     text-align: center;
-}
-
-.next a {
-    color: white;
+    height: 3em;
 }
 
 .confirm-box {
