--- a/website/loopedin/templates/signup/confirm.html
+++ b/website/loopedin/templates/signup/confirm.html
@@ -42,7 +42,7 @@
     <div class="row">
         <div class="col">
             <div class="card confirm-box">
-                Your State: {{ NAME }} <br/>
+                You: {{ NAME }} <br/>
                 Your State: {{ STATE }} <br/>
                 Your Zipcode: {{ ZIPCODE }} <br/>
                 Your Representative: {{ REP }} <br/>
