--- a/website/loopedin/templates/signup/home.html
+++ b/website/loopedin/templates/signup/home.html
@@ -55,9 +55,9 @@
             <div id="title">Looped In</div>
             <br/><br/>
             <a href="{% url 'signup:signin' %}">
-                <button type="button" class="btn btn-primary">Login</button>
+                <button type="button" class="btn btn-primary" style = "margin-right: 20px">Login</button>
             </a>
-            <a href="{% url 'signup:signup' %}">
+            <a href="{% url 'signup:signup' %}" style="margin-left: 80px;">
                 <button type="button" class="btn btn-primary">Sign Up</button>
             </a>
         </div>
@@ -68,6 +68,12 @@
 <div class="container-fluid" id="bg-2">
     <div class="row">
         <div class="center">
+            <div class="col-12">
+                <p style="color: white; background-color: rgba(0,0,0,0.6); font-size: 100px; padding-top: 5px; margin-top: -200px; margin-left: 20px; margin-right: 1300px; text-align: center; border-radius:10px">About Us</p>
+            </div>
+            <div>
+                <p class="info">Looped In is a website that allows the user to connect to their local politicians and learn about bills passed that are relevant to the user’s interests.  The purpose of this program is to connect the general public with the government so they can have a stronger and more direct connection with their officials.  Through proper interactions, we can become a significant part of congress and make reforms to benefit local communities and regions.  It is important for the people to be involved in politics and this application provides an entrance to this environment.  Through a user friendly interface and a logical system, the user can easily advocate for themselves and become involved in local governance.  Also, the application gives general information about the stances of the local representatives and the opinions about recent bills passed.</p>
+            </div>
         </div>
     </div>
 </div>
@@ -75,6 +81,12 @@
 <div class="container-fluid" id="bg-3">
     <div class="row">
         <div class="center">
+            <div class="col-12">
+                <p style="color: white; background-color: rgba(0,0,0,0.6); font-size: 100px; padding-top: 5px; margin-top: -200px; margin-left: 1000px; margin-right: 20px; text-align: center; border-radius:10px">Is this for  you?</p>
+            </div>
+            <div>
+                <p style= "margin-right: 700px; margin-left: 20px", class="info">This program is for young adults to adults who are interested in politics.  It allows this audience to connect with their local senators and representatives and voice their opinion to them.  It also allows them to see what their political figures have been working on in Congress.  This website is a great way to educate the general public about specific actions and deeds done by their local politicians.  By educating the people, they will be able to understand the importance of communicating with local level people.  Their beliefs and ideals can be expressed by these local congressmen and can benefit their daily lives.  Going through the website is simple and efficient, with only a series of buttons, textboxes, and images that provide quick, easy user interface.  The visually appealing website attracts these individuals and makes their experience with the application worth while.</p>
+            </div>
         </div>
     </div>
 </div>
@@ -82,9 +94,27 @@
 <div class="container-fluid" id="bg-4">
     <div class="row">
         <div class="center">
+            <div class="col-12">
+                <p style="color: white; background-color: rgba(0,0,0,0.6); font-size: 80px; padding-top: 5px; margin-top: -200px; margin-left: 1000px; margin-right: 20px; text-align: center; border-radius:10px">How to use Looped In?</p>
+            </div>
+            <div>
+                <p style= "margin-right: 700px; margin-left: 20px", class="info">In order to use Looped In, the user enters a username and password to log in to the website.  They then enter their zip code and state, which then shows a list of all the local congressmen in that person’s area.  From there, the user can select different political issues that they are interested in.  After the selection process, the user sees summaries of bills involved around the user’s topics of interest.  Also, the user can connect their Google Home Mini to receive notifications of bills passed by their local representatives and information about them. The world is beginning to center around politics, and the most crucial thing is for the people to be involved in this realm.  With proper connection with politicians, the public can have a greater representation in political bodies, advocate for more dire issues and reform policies to benefit society.</p>
+            </div>
         </div>
     </div>
 </div>
+
+<!--<div class="container-fluid" id="bg-5">-->
+    <!--<div class="row">-->
+            <!--<br/><br/>-->
+            <!--<a href="{% url 'signup:signin' %}">-->
+                <!--<button type="button" class="btn btn-primary" style = "margin-left: 500px; margin-right: 100px; margin-top: 20px">Login</button>-->
+            <!--</a>-->
+            <!--<a href="{% url 'signup:signup' %}" style="margin-left: 80px;">-->
+                <!--<button type="button" class="btn btn-primary" style="margin-left:500px; margin-top: 20px">Sign Up</button>-->
+            <!--</a>-->
+    <!--</div>-->
+<!--</div>-->
 
 </body>
 </html>
