--- a/website/loopedin/static/signup/css/home.css
+++ b/website/loopedin/static/signup/css/home.css
@@ -30,6 +30,31 @@ body {
     background-attachment: fixed;
 }
 
+.topBanner {
+    color: white;
+}
+
+.topBanner {
+    color: white;
+    background-color: rgba(0,0,0,0.6);
+    font-size: 100px;
+    margin-top:10px;
+    margin-left: 20px;
+}
+
+.info {
+
+    color:white;
+    background-color: rgba(0,0,0,0.6);
+    font-size: 30px;
+    margin-top: 50px;
+    margin-left: 500px;
+    line-height: 2;
+    text-align: center;
+    border-radius: 20px;
+    margin-right: 10px;
+}
+
 #bg-3 {
     height: 50vw;
     background-image: url("https://cdn.cnn.com/cnnnext/dam/assets/180221210754-02-parkland-town-hall-rubio-with-students.jpg");
@@ -39,8 +64,17 @@ body {
 }
 
 #bg-4 {
-    height: 50vw;
+    height: 60vw;
     background-image: url("https://storage.googleapis.com/afs-prod/media/media:6e186fbeb8ba48358df37ac88e3499dd/2000.jpeg");
+    background-size: cover;
+    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.2);
+    background-attachment: fixed;
+}
+
+#bg-5 {
+    height: 10vw;
+/*    background-image: url("https://storage.googleapis.com/afs-prod/media/media:6e186fbeb8ba48358df37ac88e3499dd/2000.jpeg");*/
+    background-color: rgba(0,0,0,0.6);
     background-size: cover;
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.2);
     background-attachment: fixed;
